--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
-fastapi==0.111.0
-uvicorn==0.30.1
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.4
-pillow==10.3.0
-beautifulsoup4==4.12.3
-requests==2.32.3
-lxml==5.2.1
-python-dotenv==1.0.1
-openai==1.35.10
-google-generativeai==0.7.2
-duckdb==1.1.3
-networkx==3.3
+# Web stack
+fastapi>=0.115
+uvicorn[standard]>=0.30
+aiofiles>=24.1
+python-multipart>=0.0.9
+httpx>=0.27
+
+# LLM + env
+google-generativeai>=0.8
+python-dotenv>=1.0
+
+# Engine utilities
+black>=24.8
+
+# Common data/scraping (your LLM-generated code already used these)
+requests>=2.32
+beautifulsoup4>=4.12
+pandas>=2.2
+lxml>=5.2
+
+# Optional but pragmatic (prevents runtime installs for typical charts)
+numpy>=2.0
+matplotlib>=3.9
+seaborn>=0.13
