--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,26 @@
 # Web stack
-fastapi>=0.115
-uvicorn[standard]>=0.30
-aiofiles>=24.1
-python-multipart>=0.0.9
-httpx>=0.27
+fastapi>=0.115,<0.116
+uvicorn[standard]>=0.30,<0.31
+aiofiles>=24.1,<25.0
+python-multipart>=0.0.9,<0.1
+httpx>=0.27,<0.28
+orjson>=3.10,<4.0
 
 # LLM + env
-google-generativeai>=0.8
-python-dotenv>=1.0
+google-generativeai>=0.7.2,<0.9
+python-dotenv>=1.0,<2.0
 
 # Engine utilities
-black>=24.8
+black>=24.8,<25.0
 
-# Common data/scraping (your LLM-generated code already used these)
-requests>=2.32
-beautifulsoup4>=4.12
-pandas>=2.2
-lxml>=5.2
+# Common data/scraping
+requests>=2.32,<3.0
+beautifulsoup4>=4.12,<5.0
+pandas>=2.2,<2.3
+numpy>=2.0,<2.1
+lxml==5.2.2
+openpyxl>=3.1,<3.2
 
-# Optional but pragmatic (prevents runtime installs for typical charts)
-numpy>=2.0
-matplotlib>=3.9
-seaborn>=0.13
+# Plotting (optional)
+matplotlib>=3.9,<3.10
+seaborn>=0.13,<0.14
