--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,7 @@
-# Web stack
-fastapi>=0.115,<0.116
-uvicorn[standard]>=0.30,<0.31
-aiofiles>=24.1,<25.0
-python-multipart>=0.0.9,<0.1
-httpx>=0.27,<0.28
-orjson>=3.10,<4.0
-
-# LLM + env
-google-generativeai>=0.7.2,<0.9
-python-dotenv>=1.0,<2.0
-
-# Engine utilities
-black>=24.8,<25.0
-
-# Common data/scraping
-requests>=2.32,<3.0
-beautifulsoup4>=4.12,<5.0
-pandas>=2.2,<2.3
-numpy>=2.0,<2.1
-lxml==5.2.2
-openpyxl>=3.1,<3.2
-
-# Plotting (optional)
-matplotlib>=3.9,<3.10
-seaborn>=0.13,<0.14
+fastapi
+aiofiles
+google-generativeai
+black
+uvicorn
+pyngrok
+python-multipart
